# saul-static-analyser

./: CMakeLists.txt  FormalGrammar.md  Format_new.txt  Makefile  README.md  Saul.cf
src/: Interpret.cpp  TypeCheck.cpp  TypeCheck.h  VisitTypeCheck.cpp  VisitTypeCheck.h  main.cpp
src/Saul/: Absyn.C  Absyn.H  Bison.H  Lexer.C  Makefile  Parser.C  Parser.H  ParserError.H  Printer.C  Printer.H  Saul.l  Saul.y  Skeleton.C  Skeleton.H  Test.C  TestSaul
tests/complex/ill-typed/: function-mismatch.saul
tests/complex/well-typed/: decrement_twice.saul  increment_twice.saul
tests/core/well-typed/: increment_twice.saul
tests/exceptions/ill-typed/: bad-panic.saul
tests/exceptions/well-typed/: panic-1.saul  panic-2.saul
tests/pairs/ill-typed/: bad-pairs-1.saul  bad-pairs-2.saul  bad-pairs-3.saul  bad-pairs-4.saul
tests/pairs/well-typed/: pairs.saul
tests/records/ill-typed/: bad-records-1.saul  bad-records-2.saul
tests/records/well-typed/: records-1.saul  records-2.saul
tests/recursions/ill-typed/: bad-general-recursion.saul
tests/recursions/well-typed/: general-recursion.saul
tests/references/ill-typed/: bad-refs-1.saul  bad-refs-2.saul
tests/references/well-typed/: refs-1.saul  refs-3.saul
tests/structurals/ill-typed/: bad-structurals.saul
tests/structurals/well-typed/: structurals.saul
tests/subtyping/ill-typed/: bad-subtyping-1.saul  bad-subtyping-2.saul  bad-subtyping-3.saul  bad-subtyping-4.saul
tests/subtyping/well-typed/: subtyping-1.saul  subtyping-2.saul  subtyping-3.saul  subtyping-4.saul  subtyping-5.saul  subtyping-6.saul  subtyping-7.saul  subtyping-8.saul
tests/sum-types/ill-typed/: bad-sum-types-1.saul  bad-sum-types-2.saul  bad-sum-types-3.saul  bad-sum-types-4.saul  bad-sum-types-5.saul
tests/sum-types/well-typed/: sum-types-1.saul  sum-types-2.saul  sum-types-3.saul
tests/tuples/ill-typed/: bad-tuples-1.saul  bad-tuples-2.saul
tests/tuples/well-typed/: tuples-1.saul  tuples-2.saul
tests/units/ill-typed/: bad_ignore.saul
tests/units/well-typed/: ignore.saul
